split out solutions for both parts